--- a/config/default/core.entity_view_display.node.heritage_item.full.yml
+++ b/config/default/core.entity_view_display.node.heritage_item.full.yml
@@ -175,9 +175,9 @@ third_party_settings:
             lbw-cl: ''
             lbw-at: ''
             lb-col: false
-            ow: false
+            ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: false
             ow-def-cl: false
@@ -252,7 +252,7 @@ content:
             lb-col: false
             ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: true
             ow-def-cl: true
@@ -311,7 +311,7 @@ content:
             lb-col: false
             ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: true
             ow-def-cl: true
@@ -346,7 +346,7 @@ content:
             lb-col: true
             ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: true
             ow-def-cl: true
@@ -382,7 +382,7 @@ content:
             lb-col: true
             ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: true
             ow-def-cl: true
@@ -441,7 +441,7 @@ content:
             lb-col: false
             ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: true
             ow-def-cl: true
@@ -477,7 +477,7 @@ content:
             lb-col: true
             ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: true
             ow-def-cl: true
@@ -513,7 +513,7 @@ content:
             lb-col: true
             ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: true
             ow-def-cl: true
@@ -538,7 +538,6 @@ content:
       link: true
     third_party_settings:
       ds:
-        ds_limit: ''
         ft:
           id: expert
           settings:
@@ -550,7 +549,7 @@ content:
             lb-col: true
             ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: true
             ow-def-cl: true
@@ -586,7 +585,7 @@ content:
             lb-col: true
             ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: true
             ow-def-cl: true
@@ -622,7 +621,7 @@ content:
             lb-col: true
             ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: true
             ow-def-cl: true
@@ -681,7 +680,7 @@ content:
             lb-col: false
             ow: true
             ow-el: div
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: false
             ow-def-cl: false
@@ -717,7 +716,7 @@ content:
             lb-col: true
             ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: true
             ow-def-cl: true
@@ -753,7 +752,7 @@ content:
             lb-col: true
             ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: true
             ow-def-cl: true
@@ -788,7 +787,7 @@ content:
             lb-col: true
             ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: true
             ow-def-cl: true
@@ -847,7 +846,7 @@ content:
             lb-col: false
             ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: true
             ow-def-cl: true
@@ -906,7 +905,7 @@ content:
             lb-col: false
             ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: true
             ow-def-cl: true
@@ -965,7 +964,7 @@ content:
             lb-col: false
             ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: true
             ow-def-cl: true
@@ -1024,7 +1023,7 @@ content:
             lb-col: false
             ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: true
             ow-def-cl: true
@@ -1043,9 +1042,33 @@ content:
     weight: 28
     region: main
   field_description_source:
-    type: basic_string
-    label: inline
-    settings: {  }
+    type: advanced_text
+    label: above
+    settings:
+      trim_length: '0'
+      ellipsis: '1'
+      word_boundary: '1'
+      filter: input
+      format: plain_text
+      allowed_html:
+        - a
+        - b
+        - br
+        - dd
+        - dl
+        - dt
+        - em
+        - i
+        - li
+        - ol
+        - p
+        - strong
+        - u
+        - ul
+      use_summary: 0
+      token_replace: 0
+      link_to_entity: 0
+      autop: 0
     third_party_settings:
       ds:
         ft:
@@ -1056,10 +1079,10 @@ content:
             lbw-el: strong
             lbw-cl: ''
             lbw-at: ''
-            lb-col: true
+            lb-col: false
             ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: true
             ow-def-cl: true
@@ -1094,7 +1117,7 @@ content:
             lb-col: false
             ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: false
             ow-def-cl: true
@@ -1150,10 +1173,10 @@ content:
             lbw-el: strong
             lbw-cl: ''
             lbw-at: ''
-            lb-col: true
+            lb-col: false
             ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: true
             ow-def-cl: true
@@ -1212,7 +1235,7 @@ content:
             lb-col: false
             ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: true
             ow-def-cl: true
@@ -1247,7 +1270,7 @@ content:
             lb-col: true
             ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: true
             ow-def-cl: true
@@ -1306,7 +1329,7 @@ content:
             lb-col: false
             ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: true
             ow-def-cl: true
@@ -1343,7 +1366,7 @@ content:
             lb-col: true
             ow: true
             ow-el: div
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: false
             ow-def-cl: false
@@ -1399,10 +1422,10 @@ content:
             lbw-el: strong
             lbw-cl: ''
             lbw-at: ''
-            lb-col: true
+            lb-col: false
             ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: true
             ow-def-cl: true
@@ -2047,7 +2070,7 @@ content:
             lb-col: true
             ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: true
             ow-def-cl: true
@@ -2085,7 +2108,7 @@ content:
             lb-col: false
             ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: true
             ow-def-cl: true
@@ -2121,7 +2144,7 @@ content:
             lb-col: true
             ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: true
             ow-def-cl: true
@@ -2180,7 +2203,7 @@ content:
             lb-col: false
             ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: true
             ow-def-cl: true
@@ -2216,7 +2239,7 @@ content:
             lb-col: true
             ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: true
             ow-def-cl: true
@@ -2275,7 +2298,7 @@ content:
             lb-col: false
             ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: true
             ow-def-cl: true
@@ -2311,7 +2334,7 @@ content:
             lb-col: true
             ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: true
             ow-def-cl: true
@@ -2348,7 +2371,7 @@ content:
             lb-col: true
             ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: true
             ow-def-cl: true
@@ -2386,7 +2409,7 @@ content:
             lb-col: false
             ow: true
             ow-el: div
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: false
             ow-def-cl: false
@@ -2435,7 +2458,7 @@ content:
             lb-col: false
             ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: true
             ow-def-cl: true
@@ -2472,7 +2495,7 @@ content:
             lb-col: true
             ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: true
             ow-def-cl: true
@@ -2531,7 +2554,7 @@ content:
             lb-col: false
             ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: true
             ow-def-cl: true
@@ -2590,7 +2613,7 @@ content:
             lb-col: false
             ow: true
             ow-el: div
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: false
             ow-def-cl: false
@@ -2649,7 +2672,7 @@ content:
             lb-col: false
             ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: true
             ow-def-cl: true
@@ -2708,7 +2731,7 @@ content:
             lb-col: false
             ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: true
             ow-def-cl: true
@@ -2767,7 +2790,7 @@ content:
             lb-col: false
             ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: true
             ow-def-cl: true
@@ -2826,7 +2849,7 @@ content:
             lb-col: false
             ow: true
             ow-el: div
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: false
             ow-def-cl: false
@@ -2867,7 +2890,7 @@ content:
             lb-col: true
             ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: true
             ow-def-cl: true
@@ -2904,7 +2927,7 @@ content:
             lb-col: true
             ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: true
             ow-def-cl: true
@@ -2945,7 +2968,7 @@ content:
             lb-col: true
             ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: true
             ow-def-cl: true
@@ -2982,7 +3005,7 @@ content:
             lb-col: true
             ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: true
             ow-def-cl: true
@@ -3018,7 +3041,7 @@ content:
             lb-col: true
             ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: true
             ow-def-cl: true
@@ -3077,7 +3100,7 @@ content:
             lb-col: false
             ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: true
             ow-def-cl: true
@@ -3136,7 +3159,7 @@ content:
             lb-col: false
             ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: true
             ow-def-cl: true
@@ -3174,7 +3197,7 @@ content:
             lb-col: false
             ow: true
             ow-el: ''
-            ow-cl: ''
+            ow-cl: field-outer
             ow-at: ''
             ow-def-at: true
             ow-def-cl: true
