--- a/config/default/core.entity_view_display.node.heritage_item.full.yml
+++ b/config/default/core.entity_view_display.node.heritage_item.full.yml
@@ -103,7 +103,6 @@ third_party_settings:
         - node_title
         - links
         - content_moderation_control
-        - field_item_type
         - 'display_field_copy:node-images_clone'
         - field_image2
         - field_description_summary
@@ -159,7 +158,7 @@ third_party_settings:
     fields:
       'display_field_copy:node-images_clone':
         plugin_id: 'display_field_copy:node-images_clone'
-        weight: 4
+        weight: 3
         label: hidden
         formatter: responsive_image
         settings:
@@ -268,7 +267,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 8
+    weight: 7
     region: main
   field_access_rationale:
     type: advanced_text
@@ -327,7 +326,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 10
+    weight: 9
     region: main
   field_acquired_from:
     type: basic_string
@@ -362,7 +361,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 17
+    weight: 16
     region: main
   field_associated_ceremonial_time:
     type: entity_reference_label
@@ -398,7 +397,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 20
+    weight: 19
     region: main
   field_bibliographic_citation:
     type: advanced_text
@@ -457,7 +456,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 11
+    weight: 10
     region: main
   field_catalog_id:
     type: string
@@ -493,7 +492,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 15
+    weight: 14
     region: main
   field_collection:
     type: entity_reference_label
@@ -529,7 +528,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 14
+    weight: 13
     region: main
   field_contributor_collector:
     type: entity_reference_label
@@ -565,7 +564,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 12
+    weight: 11
     region: main
   field_current_institution:
     type: entity_reference_label
@@ -601,7 +600,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 13
+    weight: 12
     region: main
   field_date_acquisition:
     type: string
@@ -637,7 +636,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 18
+    weight: 17
     region: main
   field_date_attribution:
     type: advanced_text
@@ -696,7 +695,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 23
+    weight: 22
     region: main
   field_date_collection:
     type: string
@@ -732,7 +731,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 21
+    weight: 20
     region: main
   field_date_made:
     type: string
@@ -768,7 +767,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 22
+    weight: 21
     region: main
   field_description_condition:
     type: basic_string
@@ -803,7 +802,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 25
+    weight: 24
     region: main
   field_description_howtocite:
     type: advanced_text
@@ -862,7 +861,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 52
+    weight: 51
     region: main
   field_description_materials:
     type: advanced_text
@@ -921,7 +920,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 26
+    weight: 25
     region: main
   field_description_motifs:
     type: advanced_text
@@ -980,7 +979,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 27
+    weight: 26
     region: main
   field_description_othernotes:
     type: advanced_text
@@ -1039,7 +1038,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 28
+    weight: 27
     region: main
   field_description_source:
     type: advanced_text
@@ -1098,7 +1097,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 7
+    weight: 6
     region: main
   field_description_summary:
     type: text_default
@@ -1133,7 +1132,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 6
+    weight: 5
     region: main
   field_description_symbols:
     type: advanced_text
@@ -1192,7 +1191,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 29
+    weight: 28
     region: main
   field_description_techniques:
     type: advanced_text
@@ -1251,7 +1250,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 30
+    weight: 29
     region: main
   field_dimensions:
     type: physical_dimensions_default
@@ -1286,7 +1285,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 40
+    weight: 39
     region: main
   field_exhibition_notes:
     type: advanced_text
@@ -1345,7 +1344,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 31
+    weight: 30
     region: main
   field_folders:
     type: entity_reference_label
@@ -1382,7 +1381,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 32
+    weight: 31
     region: main
   field_function_attribution:
     type: advanced_text
@@ -1441,7 +1440,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 33
+    weight: 32
     region: main
   field_geolocation:
     type: geolocation_map
@@ -2046,7 +2045,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 55
+    weight: 54
     region: main
   field_identifier_url:
     type: link
@@ -2086,7 +2085,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 16
+    weight: 15
     region: main
   field_image2:
     type: responsive_image
@@ -2124,43 +2123,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 5
-    region: main
-  field_item_type:
-    type: entity_reference_label
-    label: above
-    settings:
-      link: true
-    third_party_settings:
-      ds:
-        ft:
-          id: expert
-          settings:
-            lb: ''
-            lbw: true
-            lbw-el: strong
-            lbw-cl: ''
-            lbw-at: ''
-            lb-col: true
-            ow: true
-            ow-el: ''
-            ow-cl: field-outer
-            ow-at: ''
-            ow-def-at: true
-            ow-def-cl: true
-            fis: false
-            fis-el: ''
-            fis-cl: ''
-            fis-at: ''
-            fis-def-at: false
-            fi: false
-            fi-el: ''
-            fi-cl: ''
-            fi-at: ''
-            fi-def-at: false
-            prefix: ''
-            suffix: ''
-    weight: 3
+    weight: 4
     region: main
   field_local_origin_attribution:
     type: advanced_text
@@ -2219,7 +2182,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 39
+    weight: 38
     region: main
   field_local_origin_tid:
     type: entity_reference_label
@@ -2255,7 +2218,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 54
+    weight: 53
     region: main
   field_maker_attribution:
     type: advanced_text
@@ -2314,7 +2277,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 38
+    weight: 37
     region: main
   field_maker_name:
     type: string
@@ -2350,7 +2313,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 34
+    weight: 33
     region: main
   field_maker_role:
     type: entity_reference_label
@@ -2387,7 +2350,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 35
+    weight: 34
     region: main
   field_media_audio_video_docs_:
     type: entity_reference_entity_view
@@ -2425,7 +2388,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 53
+    weight: 52
     region: main
   field_nation_rationale:
     type: smart_trim
@@ -2474,7 +2437,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 37
+    weight: 36
     region: main
   field_nation_tid:
     type: entity_reference_label
@@ -2511,7 +2474,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 36
+    weight: 35
     region: main
   field_original_function:
     type: advanced_text
@@ -2570,7 +2533,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 41
+    weight: 40
     region: main
   field_provenance:
     type: advanced_text
@@ -2629,7 +2592,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 42
+    weight: 41
     region: main
   field_publication_history:
     type: advanced_text
@@ -2688,7 +2651,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 43
+    weight: 42
     region: main
   field_record_creation:
     type: advanced_text
@@ -2747,7 +2710,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 44
+    weight: 43
     region: main
   field_record_creation_notes:
     type: advanced_text
@@ -2806,7 +2769,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 45
+    weight: 44
     region: main
   field_region_origin_attribution:
     type: advanced_text
@@ -2865,7 +2828,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 46
+    weight: 45
     region: main
   field_related_extern_lang_items:
     type: link
@@ -2906,7 +2869,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 50
+    weight: 49
     region: main
   field_related_heritage_item:
     type: entity_reference_label
@@ -2943,7 +2906,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 47
+    weight: 46
     region: main
   field_related_heritage_out_gks:
     type: link
@@ -2984,7 +2947,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 48
+    weight: 47
     region: main
   field_related_language_item:
     type: entity_reference_label
@@ -3021,7 +2984,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 49
+    weight: 48
     region: main
   field_related_seasonal_time:
     type: entity_reference_label
@@ -3057,7 +3020,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 24
+    weight: 23
     region: main
   field_source_coll_his:
     type: advanced_text
@@ -3116,7 +3079,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 19
+    weight: 18
     region: main
   field_sources_exhib_pub_his:
     type: advanced_text
@@ -3175,7 +3138,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 51
+    weight: 50
     region: main
   field_tk_label:
     type: entity_reference_entity_view
@@ -3213,7 +3176,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 9
+    weight: 8
     region: main
   links:
     settings: {  }
@@ -3226,6 +3189,7 @@ hidden:
   field_geofield: true
   field_gks_id: true
   field_imagemy_media: true
+  field_item_type: true
   field_media_image_twoc: true
   field_region_of_origin: true
   langcode: true
