--- a/config/default/facets.facet.local_origin.yml
+++ b/config/default/facets.facet.local_origin.yml
@@ -30,7 +30,7 @@ widget:
   type: dropdown
   config:
     show_numbers: false
-    default_option_label: 'All Places of origin'
+    default_option_label: 'Places of origin'
 empty_behavior:
   behavior: none
 only_visible_when_facet_source_is_visible: true
