--- a/config/default/facets.facet.name.yml
+++ b/config/default/facets.facet.name.yml
@@ -30,7 +30,7 @@ widget:
   type: dropdown
   config:
     show_numbers: false
-    default_option_label: 'All Partner institutions'
+    default_option_label: 'Current locations'
 empty_behavior:
   behavior: none
 only_visible_when_facet_source_is_visible: true
