--- a/config/default/facets.facet.part_of_speech.yml
+++ b/config/default/facets.facet.part_of_speech.yml
@@ -30,7 +30,7 @@ widget:
   type: dropdown
   config:
     show_numbers: false
-    default_option_label: 'All Parts of speech'
+    default_option_label: 'Parts of speech'
 empty_behavior:
   behavior: none
 only_visible_when_facet_source_is_visible: true
