--- a/config/default/views.view.browse_gks.yml
+++ b/config/default/views.view.browse_gks.yml
@@ -749,6 +749,16 @@ display:
         filter_groups: false
         header: false
       header:
+        result:
+          id: result
+          table: views
+          field: result
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: result
+          empty: true
+          content: "<h2>Relatives/Heritage items</h2>\r\nDisplaying @start - @end of @total Relatives\r\n</br></br>"
         display_switch:
           id: display_switch
           table: views
@@ -764,20 +774,23 @@ display:
               label: ''
             page_1:
               enabled: 1
-              label: 'View mode: Grid'
+              label: 'View as a Grid'
             page_2:
               enabled: 1
-              label: 'or List'
-        result:
-          id: result
+              label: 'or a List'
+        area:
+          id: area
           table: views
-          field: result
+          field: area
           relationship: none
           group_type: group
           admin_label: ''
-          plugin_id: result
-          empty: true
-          content: "<h2>Relatives/Heritage items</h2>\r\nDisplaying @start - @end of @total Relatives\r\n<p>&nbsp;</p>"
+          plugin_id: text
+          empty: false
+          content:
+            value: "Browsing allows you to see all the records for relatives and heritage items in the GKS. You can also browse by materials, and/or by nations. \r\nType the materials in the box below and click “Apply.” You can select  multiple nations from the dropdown list by pressing “Ctrl” (on PC) or “Command” (on Mac) and clicking, then select “Apply.” "
+            format: full_html
+          tokenize: false
       exposed_block: false
       display_extenders:
         metatag_display_extender:
