--- a/config/default/user.role.manager.yml
+++ b/config/default/user.role.manager.yml
@@ -186,6 +186,7 @@ permissions:
   - 'create basic block content'
   - 'create content translations'
   - 'create document media'
+  - 'create field_folders'
   - 'create field_gks_id'
   - 'create field_make_role'
   - 'create field_record_editable_by'
@@ -337,6 +338,7 @@ permissions:
   - 'edit any resource content'
   - 'edit any video files'
   - 'edit any video media'
+  - 'edit field_folders'
   - 'edit field_gks_id'
   - 'edit field_record_editable_by'
   - 'edit own article content'
@@ -345,6 +347,7 @@ permissions:
   - 'edit own comments'
   - 'edit own document files'
   - 'edit own document media'
+  - 'edit own field_folders'
   - 'edit own field_gks_id'
   - 'edit own field_record_editable_by'
   - 'edit own file media'
@@ -528,6 +531,7 @@ permissions:
   - 'view landing_page_lb revisions'
   - 'view language_item revisions'
   - 'view latest version'
+  - 'view own field_folders'
   - 'view own field_gks_id'
   - 'view own field_record_editable_by'
   - 'view own files'
