--- a/config/default/field.storage.node.field_folders.yml
+++ b/config/default/field.storage.node.field_folders.yml
@@ -8,7 +8,7 @@ dependencies:
     - taxonomy
 third_party_settings:
   field_permissions:
-    permission_type: public
+    permission_type: custom
 id: node.field_folders
 field_name: field_folders
 entity_type: node
