--- a/config/default/taxonomy.vocabulary.ceremonial_time.yml
+++ b/config/default/taxonomy.vocabulary.ceremonial_time.yml
@@ -18,7 +18,7 @@ third_party_settings:
     unpublish_enable: false
     unpublish_required: false
     unpublish_revision: false
-name: 'Ceremonial Time'
+name: 'Related events/ceremonial Time'
 vid: ceremonial_time
-description: 'Associated ceremonial time of the year'
+description: 'Associated events/ceremonial time of the year'
 weight: -10
