--- a/config/default/user.role.research_assistant.yml
+++ b/config/default/user.role.research_assistant.yml
@@ -130,6 +130,7 @@ permissions:
   - 'create audio media'
   - 'create content translations'
   - 'create document media'
+  - 'create field_folders'
   - 'create field_gks_id'
   - 'create field_make_role'
   - 'create field_record_editable_by'
@@ -189,6 +190,7 @@ permissions:
   - 'edit any page content'
   - 'edit any remote_video media'
   - 'edit any video media'
+  - 'edit field_folders'
   - 'edit field_record_editable_by'
   - 'edit own article content'
   - 'edit own audio files'
@@ -196,6 +198,7 @@ permissions:
   - 'edit own comments'
   - 'edit own document files'
   - 'edit own document media'
+  - 'edit own field_folders'
   - 'edit own field_gks_id'
   - 'edit own field_make_role'
   - 'edit own field_record_editable_by'
@@ -309,6 +312,7 @@ permissions:
   - 'view icons'
   - 'view language_item revisions'
   - 'view latest version'
+  - 'view own field_folders'
   - 'view own field_gks_id'
   - 'view own field_make_role'
   - 'view own field_record_editable_by'
